--- a/views/home.erb
+++ b/views/home.erb
@@ -16,4 +16,5 @@ and a flat hand represents paper.</p>
   <li>Paper covers Rock</li>
 </ol>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/600px-Rock-paper-scissors.svg.png">
+<b> image courtesy of wikipedia</b>
 <br></br>
