--- a/views/home.erb
+++ b/views/home.erb
@@ -15,6 +15,9 @@ and a flat hand represents paper.</p>
   <li>Scissors cut Paper</li>
   <li>Paper covers Rock</li>
 </ol>
+<br></br>
 <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/Rock-paper-scissors.svg/600px-Rock-paper-scissors.svg.png">
-<b> image courtesy of wikipedia</b>
+<br></br>
+<br></br>
+<footer> image courtesy of wikipedia</footer>
 <br></br>
